# HealthyChat

./: .env  .env.example  README.md  app.py  app_env.py  database.py  pyproject.toml
alembic/: env.py
controllers/: chat.py  chat_message.py  user.py
models/: chat.py  message.py  user.py
repository/: chat.py  message.py  user.py
services/: chat_with_AI.py  together_AI.py
tools/: faq.py  heart_prediction.py  medicine.py
